[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/enemies/raw_assets/birdmonster/birdmonster.glb" type="PackedScene" id=1]
[ext_resource path="res://characters/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/enemies/Monster.gd" type="Script" id=3]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemies/AimAtObject.gd" type="Script" id=6]
[ext_resource path="res://weapons/DamageArea.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.0675617
height = 0.535579

[sub_resource type="CapsuleShape" id=3]
radius = 0.0431532
height = 0.43583

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.1657, 0.0759356, 0.111646 )

[sub_resource type="SphereShape" id=5]
radius = 0.133882

[node name="BirdMonster" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )
attack_rate = 1.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Graphics" parent="." instance=ExtResource( 1 )]

[node name="Skeleton" parent="Graphics/Armature" index="0"]
bones/0/bound_children = [ NodePath("Hip") ]
bones/1/bound_children = [ NodePath("Body") ]
bones/2/bound_children = [ NodePath("ArmUL") ]
bones/3/bound_children = [ NodePath("ArmLL") ]
bones/4/bound_children = [ NodePath("ArmUR") ]
bones/5/bound_children = [ NodePath("ArmLR") ]
bones/6/bound_children = [ NodePath("LegUL") ]
bones/7/bound_children = [ NodePath("LegLL") ]
bones/8/bound_children = [ NodePath("LegUR") ]
bones/9/bound_children = [ NodePath("LegLR") ]

[node name="ArmUL" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="1"]
transform = Transform( -0.826506, 0.56134, -0.0422589, -0.550301, -0.821497, -0.14937, -0.118563, -0.1002, 0.987878, 0.234545, 1.44253, 0.15025 )
bone_name = "upper_arm.l"

[node name="HitBox" parent="Graphics/Armature/Skeleton/ArmUL" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmUL/HitBox"]
transform = Transform( 1, 8.9407e-08, 1.2368e-06, -2.98023e-08, 2.08616e-07, -0.999998, 0, 1, 0, 0.00531298, 0.107258, 0.0271395 )
shape = SubResource( 2 )

[node name="ArmUR" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="2"]
transform = Transform( -0.849701, -0.443804, -0.284688, 0.235847, -0.802818, 0.547595, -0.471577, 0.398149, 0.786824, -0.11405, 1.49876, 0.16542 )
bone_name = "upper_arm.r"

[node name="HitBox" parent="Graphics/Armature/Skeleton/ArmUR" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmUR/HitBox"]
transform = Transform( 1, 8.9407e-08, 1.2368e-06, -2.98023e-08, 2.08616e-07, -0.999998, 0, 1, 0, 0.00531298, 0.107258, 0.0271395 )
shape = SubResource( 2 )

[node name="ArmLR" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="3"]
transform = Transform( -0.953968, 0.121887, -0.274025, -0.260468, -0.789645, 0.555534, -0.14867, 0.601335, 0.785043, -0.305765, 1.15196, 0.337412 )
bone_name = "lower_arm.r"

[node name="HitBox" parent="Graphics/Armature/Skeleton/ArmLR" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLR/HitBox"]
transform = Transform( 1, 8.9407e-08, 1.2368e-06, -2.98023e-08, 2.08616e-07, -0.999998, 0, 1, 0, 0.00531298, 0.107258, 0.0271395 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLR/HitBox"]
transform = Transform( 0.938235, -0.209951, 0.275018, 0.272503, -0.0413992, -0.961262, 0.213204, 0.976835, 0.0183701, -0.0586024, 0.582952, -0.0170228 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLR/HitBox"]
transform = Transform( 0.943513, -0.189984, 0.271457, 0.175527, -0.408271, -0.895824, 0.281021, 0.892872, -0.351862, -0.0560798, 0.5366, 0.101893 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLR/HitBox"]
transform = Transform( 0.934525, -0.231999, 0.269886, 0.340673, 0.363721, -0.866975, 0.102975, 0.902155, 0.418941, -0.0563481, 0.541532, -0.158836 )
shape = SubResource( 3 )

[node name="ArmLL" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="4"]
transform = Transform( -0.972884, 0.230485, -0.0193162, -0.230879, -0.962749, 0.140745, 0.0138429, 0.141388, 0.989857, 0.477033, 1.08765, 0.106966 )
bone_name = "lower_arm.l"

[node name="HitBox" parent="Graphics/Armature/Skeleton/ArmLL" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLL/HitBox"]
transform = Transform( 1, 8.9407e-08, 1.2368e-06, -2.98023e-08, 2.08616e-07, -0.999998, 0, 1, 0, 0.00531298, 0.107258, 0.0271395 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLL/HitBox"]
transform = Transform( 0.923025, 0.223054, -0.313485, -0.305367, -0.0709339, -0.949589, -0.234046, 0.972222, 0.00263941, 0.056964, 0.558256, -0.00883049 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLL/HitBox"]
transform = Transform( 0.901904, 0.00391013, -0.431916, -0.399211, -0.374254, -0.836998, -0.164919, 0.927318, -0.33598, 0.043741, 0.515494, 0.108623 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape" parent="Graphics/Armature/Skeleton/ArmLL/HitBox"]
transform = Transform( 0.261268, 0.84378, -0.468802, -0.628264, -0.220067, -0.746229, -0.73282, 0.489495, 0.472619, 0.0567951, 0.569663, -0.171477 )
shape = SubResource( 3 )

[node name="LegUL" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="5"]
transform = Transform( -0.782991, 0.148378, 0.604052, 0.0548879, -0.950859, 0.304719, 0.619566, 0.271754, 0.736389, 0.131876, 0.936301, 1.37659e-07 )
bone_name = "upperleg.l"

[node name="HitBox" parent="Graphics/Armature/Skeleton/LegUL" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/LegUL/HitBox"]
transform = Transform( 1, 2.98023e-07, 1.13249e-06, -1.19209e-07, 2.83122e-07, -0.999999, 3.57628e-07, 1, 2.98023e-07, 0.00938836, 0.189079, -0.0121656 )
shape = SubResource( 2 )

[node name="LegUR" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="6"]
transform = Transform( -0.782991, -0.148378, -0.604051, -0.0548878, -0.950859, 0.304719, -0.619566, 0.271754, 0.736389, -0.131876, 0.936301, 1.37659e-07 )
bone_name = "upperleg.r"

[node name="HitBox" parent="Graphics/Armature/Skeleton/LegUR" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/LegUR/HitBox"]
transform = Transform( 1, 2.98023e-07, 1.13249e-06, -1.19209e-07, 2.83122e-07, -0.999999, 3.57628e-07, 1, 2.98023e-07, 0.00938836, 0.189079, -0.0121656 )
shape = SubResource( 2 )

[node name="LegLR" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="7"]
transform = Transform( -0.786337, 0.178847, -0.591318, -0.0264707, -0.966053, -0.256983, -0.617189, -0.186426, 0.764397, -0.193831, 0.539271, 0.113471 )
bone_name = "lowerleg.r"

[node name="HitBox" parent="Graphics/Armature/Skeleton/LegLR" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/LegLR/HitBox"]
transform = Transform( 0.917104, 0.398545, -0.00939742, 0.00276764, -0.0299112, -0.999549, -0.398641, 0.916664, -0.0285348, 0.00413958, 0.262606, -0.00480522 )
shape = SubResource( 2 )

[node name="LegLL" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="8"]
transform = Transform( -0.786337, -0.178847, 0.591318, 0.0264708, -0.966053, -0.256983, 0.61719, -0.186426, 0.764397, 0.193831, 0.539271, 0.113471 )
bone_name = "lowerleg.l"

[node name="HitBox" parent="Graphics/Armature/Skeleton/LegLL" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/LegLL/HitBox"]
transform = Transform( 1, 2.98023e-07, 1.13249e-06, -1.19209e-07, 2.83122e-07, -0.999999, 3.57628e-07, 1, 2.98023e-07, 0.00938836, 0.189079, -0.0121656 )
shape = SubResource( 2 )

[node name="Hip" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.915201, 0 )
bone_name = "hip"

[node name="HitBox" parent="Graphics/Armature/Skeleton/Hip" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/Hip/HitBox"]
transform = Transform( 1, 2.98023e-07, 1.12092e-06, -1.39448e-07, 3.38056e-07, -1.19403, 3.57628e-07, 1, 2.98023e-07, 0.00202385, 0.175223, 0.0119261 )
shape = SubResource( 4 )

[node name="Body" type="BoneAttachment" parent="Graphics/Armature/Skeleton" index="10"]
transform = Transform( 0.986326, 0.162169, -0.0293755, -0.159121, 0.890622, -0.425997, -0.042921, 0.424846, 0.904247, 0, 1.13977, 0 )
bone_name = "body"

[node name="HitBox" parent="Graphics/Armature/Skeleton/Body" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/Body/HitBox"]
transform = Transform( 1, 2.85607e-07, 1.11607e-06, -1.47614e-07, -0.00102074, -1.27114, 3.64815e-07, 1.05922, 0.00121944, 0.00202385, 0.175223, 0.0119261 )
shape = SubResource( 4 )

[node name="HitBox2" parent="Graphics/Armature/Skeleton/Body" instance=ExtResource( 2 )]
transform = Transform( 1, -5.96046e-08, -2.98023e-08, 1.49012e-08, 1, 0, -4.26326e-14, 0, 1, 0, 0, 0 )
weak_spot = true

[node name="CollisionShape" type="CollisionShape" parent="Graphics/Armature/Skeleton/Body/HitBox2"]
transform = Transform( 0.474145, 1.71839e-07, 5.38043e-07, -5.2608e-08, -0.00639376, -0.42931, 1.52699e-07, 0.325959, 0.0076345, -0.000220194, 0.485348, 0.313047 )
shape = SubResource( 5 )

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
max_health = 20

[node name="CharacterMover" parent="." instance=ExtResource( 5 )]
move_accel = 2
max_speed = 7
ignore_rotation = true

[node name="AimAtObject" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.282, 0 )
script = ExtResource( 6 )

[node name="DamageArea" parent="AimAtObject" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.66261, -2.55744, 0.750896 )

[editable path="Graphics"]
